--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,5 @@
 // bower:scss
+@import "bower_components/octicons/octicons/sprockets-octicons.scss";
 // endbower
 
 html, body {
@@ -9,5 +10,20 @@ html, body {
 
 html, body, input {
   font-family: 'Open Sans', sans-serif;
-  font-weight: normal; 
+  font-weight: normal;
+}
+
+.info {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 2;
+
+  a {
+    color: white;
+
+    &:hover {
+      color: #ccc;
+    }
+  }
 }
